--- a/assets/css/sass/developer.scss
+++ b/assets/css/sass/developer.scss
@@ -31,6 +31,7 @@
 
         @media screen and (max-width:991px) {
             text-align: center;
+            padding-bottom: 0px;
         }
     }
     .dev_left{
