--- a/assets/css/testimonial.css
+++ b/assets/css/testimonial.css
@@ -21,7 +21,7 @@
   font-size: 48px;
   font-weight: 600;
   line-height: 64px;
-  color: #3EAB90;
+  color: #3eab90;
   padding-bottom: 16px;
 }
 .fz_testimonial .fz_testimonial_top p {
@@ -78,7 +78,7 @@
   font-size: 28px;
   font-weight: 600;
   line-height: 38px;
-  color: #3EAB90;
+  color: #3eab90;
   padding-bottom: 8px;
 }
 .fz_testimonial .fz_testimonial_items .fz_testimonial_item .fz_testimonial_item_content p {
