--- a/assets/css/features.css
+++ b/assets/css/features.css
@@ -30,7 +30,7 @@
   position: absolute;
   height: 41.625rem;
   will-change: transform;
-  background-color: #1A2C2A;
+  background-color: #1a2c2a;
   box-shadow: 0px 0px 8px rgba(16, 106, 64, 0.3607843137);
   --border-angle: 0turn;
   --main-bg: conic-gradient(
@@ -99,7 +99,7 @@
   animation-delay: 1.5s;
 }
 
-.panel__stack .panel__card.panel__card--one {
+.panel__stack .panel__card.panel__card {
   height: 43rem;
 }
 
@@ -299,7 +299,7 @@
 }
 .panel .panel__stack .panel__card .nav.nav-pills li .nav-link.active {
   background-color: transparent;
-  border-bottom: 3px solid #3EAB90;
+  border-bottom: 3px solid #3eab90;
 }
 .panel .panel__stack .panel__card .tab-content .fz-tab-card {
   display: flex;
@@ -310,9 +310,15 @@
     flex-direction: column;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
   .panel .panel__stack .panel__card .tab-content .fz-tab-card {
     flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  .panel .panel__stack .panel__card .tab-content .fz-tab-card {
+    width: 100%;
   }
 }
 .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay {
@@ -320,7 +326,7 @@
   min-width: 30%;
   background: #fff;
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
   .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay {
     width: calc(50% - 20px);
   }
@@ -333,9 +339,15 @@
   width: 100%;
   height: 270px;
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
   .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay img {
     width: 100%;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay img {
+    width: 100%;
+    height: auto;
   }
 }
 .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay div {
@@ -344,11 +356,22 @@
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
 }
+@media screen and (min-width: 992px) and (max-width: 1400px) {
+  .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay div {
+    min-height: 225px;
+  }
+}
 .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay div h3 {
-  color: #F7C35F;
+  color: #f7c35f;
   font-size: 20px;
   font-weight: 500;
   line-height: 36px;
+}
+@media screen and (max-width: 767px) {
+  .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay div h3 {
+    font-size: 18px;
+    line-height: 28px;
+  }
 }
 .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay div p {
   color: #ffffff;
@@ -357,9 +380,15 @@
   line-height: 25px;
   min-height: 75px;
 }
+@media screen and (max-width: 767px) {
+  .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay div p {
+    font-size: 14px;
+    line-height: 20px;
+  }
+}
 .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay div a {
   display: none;
-  color: #3EAB90;
+  color: #3eab90;
   font-size: 18px;
   text-decoration: none;
 }
