--- a/assets/css/sass/BankZor.scss
+++ b/assets/css/sass/BankZor.scss
@@ -38,6 +38,7 @@
 
       @media screen and (max-width: 991px) {
         text-align: center;
+        line-height: 38px;
       }
     }
     .fz_description {
