--- a/assets/css/sass/counter.scss
+++ b/assets/css/sass/counter.scss
@@ -62,6 +62,10 @@
     text-align: left;
     color: #3EAB90;
     text-align: center;
+    @media screen and (max-width:991px) {
+      font-size: 30px;
+      line-height: 44px;
+    }
   }
   p{
    
@@ -90,6 +94,10 @@
       line-height: 60px;
       text-align: center;
       color: #FFFFFF; 
+      @media screen and (max-width:991px) {
+        font-size: 18px;
+        line-height: 26px;
+      }
       @media (min-width: 992px) and (max-width: 1199px) {
         font-size: 20px;
       }
@@ -106,6 +114,11 @@
         &:before {
           background: unset;
         }
+      }
+
+      @media screen and (max-width:991px) {
+        width:50%;
+        padding: 15px 0px;
       }
      
     }
@@ -137,6 +150,9 @@
         background-clip: text; 
         -webkit-background-clip: text; 
         -webkit-text-fill-color: transparent; 
+        @media screen and (max-width:991px) {
+          font-size: 30px;
+        }
       }
       .count.percent_1:after {
         content: "+";
