--- a/assets/css/sass/faq.scss
+++ b/assets/css/sass/faq.scss
@@ -10,6 +10,7 @@
         text-align: center;
         video {
           width: 100%;
+          height:150px;
         }
       }
     }
@@ -56,6 +57,10 @@
       padding: 14px 24px;
       font-size: 16px;
     }
+
+    @media (min-width: 769px) and (max-width: 1200px) {
+      line-height: 28px;
+    }
       }
       .accordion-item{
         margin-bottom:20px;
@@ -95,9 +100,8 @@
        color: $primary-color; 
        font-weight: 500;
       //  padding-bottom: 50px;
-       @media screen and (max-width: 768px) {
+       @media screen and (max-width: 991px) {
         font-size: 35px;
-        padding-bottom: 25px;
       }
        br{
         @media screen and (max-width:991px) {
