--- a/assets/css/sass/features.scss
+++ b/assets/css/sass/features.scss
@@ -86,7 +86,10 @@
   .panel__stack .panel__card:nth-child(4) {
     animation-delay: 1.5s; 
   }
-  .panel__stack .panel__card.panel__card--one {
+  // .panel__stack .panel__card.panel__card--one {
+  //   height: 43rem;
+  // }
+  .panel__stack .panel__card.panel__card {
     height: 43rem;
   }
   .panel__stack .panel__card:first-child {
@@ -279,14 +282,18 @@
                     @media screen and (max-width: 767px) {
                       flex-direction: column;
                     }
-                    @media screen and (min-width: 768px) and (max-width: 1199px) {
+                    @media screen and (min-width: 768px) and (max-width: 991px) {
                       flex-wrap: wrap;
+                      justify-content: center;
+                    }
+                    @media screen and (min-width: 992px) and (max-width: 1199px) {
+                       width:100%;
                     }
                     .item-pay {
                         border-radius: 8px;
                         min-width: 30%;
                         background: #fff;
-                        @media screen and (min-width: 768px) and (max-width: 1199px) {
+                        @media screen and (min-width: 768px) and (max-width: 991px) {
                           width: calc(50% - 20px);
                         }
                         svg{
@@ -296,20 +303,32 @@
                         img {
                           width: 100%;
                           height: 270px;
-                          @media screen and (min-width: 768px) and (max-width: 1199px) {
+                          @media screen and (min-width: 768px) and (max-width: 991px) {
                             width: 100%;
                           }
+                          @media screen and (min-width: 992px) and (max-width: 1199px) {
+                            width: 100%;
+                            height: auto;
+                          }
+            
                         }
                         div {
                             padding: 20px;
                             background-color: $black;
                             border-bottom-left-radius: 8px;
                             border-bottom-right-radius: 8px;
+                            @media screen and (min-width: 992px) and (max-width: 1400px) {
+                              min-height: 225px;
+                            }
                             h3 {
                                 color: $secondary-color;
                                 font-size: 20px;
                                 font-weight: 500;
                                 line-height: 36px;
+                                @media screen and (max-width: 767px) {
+                                 font-size: 18px;
+                                 line-height: 28px;
+                                }
                             }
                             p {
                                 color: $white;
@@ -317,6 +336,10 @@
                                 font-weight: 400;
                                 line-height: 25px;
                                 min-height: 75px;
+                                @media screen and (max-width: 767px) {
+                                  font-size: 14px;
+                                  line-height: 20px;
+                                 }
                             }
                             a {
                                 display: none;
