--- a/assets/css/sass/newsletter.scss
+++ b/assets/css/sass/newsletter.scss
@@ -32,17 +32,21 @@
     }
     .input-group{
     width: 636.71px;
-    height: 71px;
+    height: 70px;
     gap: 0px;
     border-radius: 0px 8px 8px 0px;
     border: 1px 0px 0px 0px;
     opacity: 0px;
     margin: 0 auto;
-    margin-top: 72px;
+    margin-top: 30px;
     border: none;
-    @media screen and (max-width:991px) {
+    @media screen and (max-width:768px) {
       width: auto;
       margin-top: 40px;
+    }
+    @media screen and (min-width: 769px) and (max-width: 991px) {
+        width:60%;
+        margin-top: 40px;
     }
     button{
         background-color: $primary-color !important;
