--- a/assets/css/sass/playstore.scss
+++ b/assets/css/sass/playstore.scss
@@ -62,10 +62,17 @@
             line-height: 46px;
             text-align: center;
         }
+        @media (min-width: 992px) and (max-width: 1300px) {
+      
+            font-size: 36px;
+            line-height: 46px;
+            text-align: left;
+   }
     }
     ul{
         padding: 0;
         margin: 10px 20px 20px;
+        list-style: none;
         li{
                 line-height: 25px;
                 color: #dfb946;
