--- a/assets/css/marquee.css
+++ b/assets/css/marquee.css
@@ -8,7 +8,7 @@
 }
 #logo_marquee {
   --space: 5px;
-  background-color: #1a2c2a;
+  background-color: #1A2C2A;
   padding: 20px 0;
   display: none;
 }
