--- a/assets/css/developer.css
+++ b/assets/css/developer.css
@@ -54,6 +54,7 @@
 @media screen and (max-width: 767px) {
   .developer_section .dev_left {
     padding: 15px 0;
+    flex-direction: column;
   }
 }
 .developer_section .dev_left .row {
@@ -68,14 +69,11 @@
   border-radius: 12px;
   border: solid 1px transparent;
   --border-angle: 0turn;
-  --main-bg: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
+  --main-bg:conic-gradient(from var(--border-angle), #0c0d0d 0%, #0d0e0e 100%);
   --gradient-border: conic-gradient(from var(--border-angle), transparent 10%, #05311d, #3EAB90 49%, transparent);
   background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
   background-position: center center;
   animation: bg-spin 8s linear infinite;
-  background: radial-gradient(113.04% 100% at 50% 0, #181818 0%, rgb(25, 25, 25) 0.01%, hsla(0, 0%, 3%, 0.81) 100%);
-  border-radius: 20px;
-  box-shadow: inset 1.2px 0 rgba(255, 255, 255, 0.0392156863), inset -1.2px 0 rgba(255, 255, 255, 0.0392156863), inset 0 1.2px rgba(255, 255, 255, 0.1019607843), inset 0 0.6px rgba(255, 255, 255, 0.1019607843);
 }
 .developer_section .dev_left .dev_card:hover {
   --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #F7C35F, #3EAB90 99%, transparent);
@@ -121,6 +119,7 @@
   font-weight: 300;
   margin-bottom: 0px;
   transition: all 0.6s ease;
+  text-align: left;
 }
 .developer_section .code-container {
   white-space: pre; /* Preserve code formatting */
