--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -21,7 +21,6 @@
   }
   .faq_section .faq_header video {
     width: 100%;
-    height: 150px;
   }
 }
 .faq_section .accordion-item .accordion-header {
@@ -67,11 +66,6 @@
     font-size: 16px;
   }
 }
-@media (min-width: 769px) and (max-width: 1200px) {
-  .faq_section .accordion-item .accordion-header .accordion-button {
-    line-height: 28px;
-  }
-}
 .faq_section .accordion-item {
   margin-bottom: 20px;
   border-radius: 16px;
@@ -109,9 +103,10 @@
   color: #3eab90;
   font-weight: 500;
 }
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 768px) {
   .faq_section h3 {
     font-size: 35px;
+    padding-bottom: 25px;
   }
 }
 @media screen and (max-width: 991px) {
