--- a/assets/css/sass/developer.scss
+++ b/assets/css/sass/developer.scss
@@ -41,6 +41,7 @@
         justify-content: center;
         @media screen and (max-width: 767px) {
             padding: 15px 0;
+            flex-direction: column;
         }
         .row{
             margin:30px 0px;
@@ -54,23 +55,12 @@
         border-radius: 12px;
         border: solid 1px transparent;
         --border-angle: 0turn;
-            --main-bg: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
+            --main-bg:conic-gradient(from var(--border-angle), #0c0d0d 0%, #0d0e0e 100%);
             --gradient-border: conic-gradient(from var(--border-angle), transparent 10%, #05311d, #3EAB90 49%, transparent);
             background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
             background-position: center center;
             animation: bg-spin 8s linear infinite;
-            background: radial-gradient(
-                113.04% 100% at 50% 0,
-                #181818 0%,
-                rgba(25, 25, 25, 1) 0.01%,
-                hsla(0, 0%, 3%, 0.81) 100%
-              );
-              border-radius: 20px;
-              box-shadow: 
-                inset 1.2px 0 #ffffff0a, 
-                inset -1.2px 0 #ffffff0a, 
-                inset 0 1.2px #ffffff1a, 
-                inset 0 0.6px #ffffff1a;    
+              
         
         &:hover {
             // --border-angle: 0turn;
@@ -123,6 +113,7 @@
             font-weight: 300;
             margin-bottom: 0px;
             transition: all 0.6s ease;
+            text-align: left;
         }
        }
     }
