--- a/assets/css/sass/playstore.scss
+++ b/assets/css/sass/playstore.scss
@@ -72,13 +72,16 @@
     ul{
         padding: 0;
         margin: 10px 20px 20px;
-        list-style: none;
         li{
                 line-height: 25px;
                 color: #dfb946;
                 font-size: 14px;
                 font-weight: 400;
         }
+@media  (max-width: 991px) {
+      
+           list-style: none;
+   }
         
     }
     p{
