--- a/assets/css/sass/core.scss
+++ b/assets/css/sass/core.scss
@@ -6,39 +6,21 @@
         background-color: $tertiary-color;
         border-radius: 16px;
         padding-top: 30px;
-        --border-angle: 0turn;
-        --main-bg: conic-gradient(
-            from var(--border-angle),
-            #1A2C2A 0%,  
-            #1A2C2A 100%
-            );
-        border: solid 1px transparent;
-        --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #F7C35F, #3EAB90 99%, transparent);
-        background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
-        background-position: center center;
-        animation: bg-spin 4s linear infinite;
-        @keyframes bg-spin {
-            to {
-            --border-angle: 1turn;
-            }
-        }
-        
+        @include neon-border;
         .fz_core_text {
             background-color: $black;
             border-top-left-radius: 32px;
             border-top-right-radius: 32px;
-            transform: rotate(-8.5deg);
+            // transform: rotate(-8.5deg);
             width: 422px;
-            height: 605px;
-            margin-left: 62px;
-            position: relative;
-            top: 35px;
+            // height: 605px;
+            // position: relative;
+            // top: 35px;
+            margin: 0 auto;
             overflow: hidden;
             
             @media (min-width: 992px) and (max-width: 1200px) {
                 width:375px;
-                height:auto;
-
 }
             h3 {
                 font-size: 32px;
@@ -54,7 +36,6 @@
                 }
             }
             img {
-                transform: rotate(8.5deg);
                 position: relative;
                 z-index: 1;
 
@@ -76,22 +57,24 @@
                     height: 90px;
                     border-radius:50%;
                     &:nth-child(1) {
-                        top: 38%;
-                        left: 10%;
+                        top: 35%;
+                        left: 5%;
                         animation: animate 16s linear infinite;
-                        background: $secondary-color;
                     }
                     &:nth-child(2) {
-                        top: 80%;
-                        left: 70%;
+                        top: 32%;
+                        left: 35%;
                         animation: animate 12s linear infinite;
-                        background: $primary-color;
                     }
                     &:nth-child(3) {
-                        top: 38%;
-                        right: 0%;
+                        top: 40%;
+                        right: 8%;
                         animation: animate 10s linear infinite;
-                        background: $primary-color;
+                    }
+                    &:nth-child(4) {
+                        bottom: 0;
+                        right: 0;
+                        animation: animate 8s linear infinite;
                     }
                 }
             }
@@ -232,12 +215,12 @@
 }
 @keyframes animate {
     0% {
-      transform: scale(0) translateY(-90px) rotate(360deg);
+      transform: scale(0) translateY(-80px);
       opacity: 1;
     }
     
     100% {
-      transform: scale(1.3) translateY(-90px) rotate(-180deg);
+      transform: scale(1) translateY(-90px);
       border-radius: 50%;
       opacity: 0;
     } 
