--- a/assets/css/variable.css
+++ b/assets/css/variable.css
@@ -6,3 +6,8 @@
     transform: translateX(50%);
   }
 }
+@property --border-angle {
+  syntax: "<angle>";
+  inherits: true;
+  initial-value: 0turn;
+}
