--- a/assets/css/sass/variable.scss
+++ b/assets/css/sass/variable.scss
@@ -37,3 +37,26 @@ $ternary-color: #2d4949;
     transform: translateX(50%);
   }
 }
+@mixin neon-border {
+  --border-angle: 0turn;
+  --main-bg: conic-gradient(
+      from var(--border-angle),
+      #1A2C2A 0%,  
+      #1A2C2A 100%
+      );
+  border: solid 1px transparent;
+  --gradient-border: conic-gradient(from var(--border-angle), transparent 5%, #F7C35F, #3EAB90 99%);
+  background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+  background-position: center center;
+  animation: bg-spin 4s linear infinite;
+  @keyframes bg-spin {
+      to {
+      --border-angle: 1turn;
+      }
+  }
+}
+@property --border-angle {
+  syntax: "<angle>";
+  inherits: true;
+  initial-value: 0turn;
+}
